Adaptive: fix z-index on social popups

--- a/source/style/common/_header.sass
+++ b/source/style/common/_header.sass
@@ -142,6 +142,7 @@
 
 	&__form
 		position: absolute
+		z-index: 10
 		display: none
 		background: $white
 		padding: 11px
